--- a/src/site.ejs
+++ b/src/site.ejs
@@ -10,7 +10,7 @@
     <link href="output.css" rel="stylesheet" />
 </head>
 <body class="bg-white">
-<section class="bg-cover bg-center flex flex-col justify-center pt-9 min-h-screen md:w-full relative" style="background-image: url(./restpobocka.jpg)">
+<section class="bg-cover bg-center flex flex-col justify-center pt-9 min-h-screen md:w-full relative" style="background-image: url(image/restpobocka.jpg)">
     <header id="header" class="bg-transparent transition duration-300 absolute md:fixed w-full z-20 top-0 start-0">
         <nav class="relative container px-4 py-8 flex justify-between items-center">
             <div class="max-md:z-10">
@@ -20,7 +20,7 @@
             </div>
             <div class="lg:hidden">
                 <button class="navbar-burger flex items-center text-blue-600 p-3">
-                    <svg class="block h-4 w-4 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="block h-4 w-4" viewBox="0 0 20 20" fill="#CF2424" xmlns="http://www.w3.org/2000/svg">
                         <title>Mobile menu</title>
                         <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
                     </svg>
@@ -73,25 +73,28 @@
     <!-- KDO JSME? -->
     <section class="py-2" id="about-us">
         <!-- HEADING -->
-        <div class="sm:w-3/4 lg:w-5/12 mx-auto px-2">
-            <h1 class="text-3xl text-center text-bookmark-blue">Featurky</h1>
+        <div class="sm:w-3/4 lg:w-9/12 mx-auto px-2">
+            <h1 class="text-3xl text-center text-bookmark-blue">O Nás</h1>
             <p class="text-center text-black mt-4">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam
+                bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam
                 bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
             </p>
         </div>
         <!--FEATURES - feature n1-->
         <div class="relative mt-20 lg:mt-24">
-            <div class="container flex flex-col lg:flex-row items-center justify-center gap-x-24">
+            <div class="container flex flex-col lg:flex-row items-center justify-center">
                 <!-- obrázek-->
-                <div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
+                <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 lg:mb-0">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="image/picture-1.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
-                <div class="flex flex-1 flex-col items-center">
+                <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
                     <h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
                     <p class="text-black my-4 text-center sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
+                        necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.
                     </p>
                 </div>
@@ -100,16 +103,17 @@
         </div>
         <!--FEATURES - feature n2-->
         <div class="relative mt-20 lg:mt-24">
-            <div class="container flex flex-col lg:flex-row-reverse items-center justify-center gap-x-24">
+            <div class="container flex flex-col lg:flex-row-reverse items-center justify-center">
                 <!-- obrázek-->
                 <div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]" src="image/picture-2.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
-                <div class="flex flex-1 flex-col items-center">
+                <div class="flex flex-1 flex-col items-center lg:max-w-[480px]">
                     <h1 class="text-3xl text-bookmark-blue">Kávička</h1>
                     <p class="text-black my-4 text-center sm:text-center sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio
+                        illo dicta beatae dolore voluptatum accusamus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio
                         illo dicta beatae dolore voluptatum accusamus.
                     </p>
                 </div>
@@ -118,16 +122,17 @@
         </div>
         <!--FEATURES - feature n3-->
         <div class="relative mt-20 lg:mt-24">
-            <div class="container flex flex-col lg:flex-row items-center justify-center gap-x-24">
+            <div class="container flex flex-col lg:flex-row items-center justify-center">
                 <!-- obrázek-->
-                <div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
-                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./coffee.jpg" alt="">
+                <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 lg:mb-0">
+                    <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]" src="image/picture-3.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
-                <div class="flex flex-1 flex-col items-center">
-                    <h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
+                <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
+                    <h1 class="text-3xl text-bookmark-blue">Káva 3</h1>
                     <p class="text-black my-4 text-center sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
+                        necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.
                     </p>
                 </div>
