--- a/src/site.ejs
+++ b/src/site.ejs
@@ -8,6 +8,41 @@
     <link rel="stylesheet" href="./output.css">
 
     <link href="output.css" rel="stylesheet" />
+
+    <style>
+		.custom-underline {
+			position: relative;
+		}
+		.custom-underline::after {
+			content: '';
+			position: absolute;
+			left: 0;
+			bottom: -2px;
+			width: 100%;
+			height: 2px;
+			background: currentColor;
+			transform: scaleX(0);
+			transition: transform 0.3s ease-in-out;
+			transform-origin: center;
+		}
+		.custom-underline:hover::after,
+		.custom-underline:focus::after {
+			transform: scaleX(1);
+		}
+		.custom-underline:hover,
+		.custom-underline:focus {
+			color: #CF2424;
+		}
+
+		.custom-underline-footer:hover,
+		.custom-underline-footer:focus {
+			color: #FFF;
+		}
+
+        svg:hover {
+            fill: #C9C9C9;
+        }
+    </style>
 </head>
 <body class="bg-white">
 <section class="bg-cover bg-center flex flex-col justify-center pt-9 min-h-screen md:w-full relative" style="background-image: url(image/restpobocka.jpg)">
@@ -18,7 +53,7 @@
                     <img src="./restlogo.png" class="h-16" alt="restcafe logo">
                 </a>
             </div>
-            <div class="lg:hidden">
+            <div class="md:hidden">
                 <button class="navbar-burger flex items-center text-blue-600 p-3">
                     <svg class="block h-4 w-4" viewBox="0 0 20 20" fill="#CF2424" xmlns="http://www.w3.org/2000/svg">
                         <title>Mobile menu</title>
@@ -26,10 +61,33 @@
                     </svg>
                 </button>
             </div>
-            <ul id="list-items-burger" class="hidden top-1/2 lg:flex lg:flex lg:items-center lg:space-x-6">
-                <li><a class="text-xl text-white hover:text-red-700" href="#about-us">O nás</a></li>
-                <li><a class="text-xl text-white hover:text-red-700" href="#nabidka-menu">Nabídka</a></li>
-                <li><a class="text-xl text-white hover:text-red-700" href="#location">Kde nás najdete?</a></li>
+            <ul id="list-items-burger" class="hidden top-1/2 md:flex md:flex md:items-center md:space-x-6">
+                <li><a class="text-xl text-white hover:text-red-700 custom-underline" href="#about-us">O nás</a></li>
+                <li><a class="text-xl text-white hover:text-red-700 custom-underline" href="#nabidka-menu">Nabídka</a></li>
+                <li><a class="text-xl text-white hover:text-red-700 custom-underline" href="#location">Kde nás najdete</a></li>
+                <li>
+                    <a href="https://www.instagram.com/restcafe.cz/"
+                       class=""
+                       target="_blank">
+                        <svg viewBox="0 0 30 30" fill="#8F1628" class="h-10 transition-colors duration-300">
+                            <circle cx="15" cy="15" r="4"></circle>
+                            <path
+                                    d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z"
+                            ></path>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/restcafecz/"
+                       class=""
+                       target="_blank">
+                        <svg viewBox="0 0 24 24" fill="#8F1628" class="h-8 transition-colors duration-300">
+                            <path
+                                    d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
+                            ></path>
+                        </svg>
+                    </a>
+                </li>
             </ul>
         </nav>
         <div class="navbar-menu relative z-50 hidden">
@@ -75,7 +133,7 @@
         <!-- HEADING -->
         <div class="sm:w-3/4 lg:w-9/12 mx-auto px-2">
             <h1 class="text-3xl text-center text-bookmark-blue">O Nás</h1>
-            <p class="text-center text-black mt-4">
+            <p class="text-center text-sm lg:text-base text-black mt-4">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam
                 bibendum elit eget erat. Nunc dapibus tortor vel mi dapibus sollicitudin.
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque tincidunt scelerisque libero. Etiam
@@ -84,15 +142,15 @@
         </div>
         <!--FEATURES - feature n1-->
         <div class="relative mt-20 lg:mt-24">
-            <div class="container flex flex-col lg:flex-row items-center justify-center">
+            <div class="container flex flex-col md:flex-row items-center justify-center">
                 <!-- obrázek-->
-                <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 lg:mb-0">
+                <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 md:m-0 lg:mb-0">
                     <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="image/picture-1.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
                     <h1 class="text-3xl text-bookmark-blue">Káva 1</h1>
-                    <p class="text-black my-4 text-center sm:w-3/4 lg:w-full">
+                    <p class="text-sm lg:text-base text-black text-left my-4 w-10/12 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.
@@ -103,15 +161,15 @@
         </div>
         <!--FEATURES - feature n2-->
         <div class="relative mt-20 lg:mt-24">
-            <div class="container flex flex-col lg:flex-row-reverse items-center justify-center">
+            <div class="container flex flex-col md:flex-row-reverse items-center justify-center">
                 <!-- obrázek-->
-                <div class="flex flex-1 justify-center z-10 mb-10 lg:mb-0">
+                <div class="flex flex-1 justify-center z-10 mb-10 md:m-0 lg:mb-0">
                     <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]" src="image/picture-2.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-1 flex-col items-center lg:max-w-[480px]">
                     <h1 class="text-3xl text-bookmark-blue">Kávička</h1>
-                    <p class="text-black my-4 text-center sm:text-center sm:w-3/4 lg:w-full">
+                    <p class="text-sm lg:text-base text-black my-4 text-left w-10/12 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio
                         illo dicta beatae dolore voluptatum accusamus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptates sit eum, distinctio
                         illo dicta beatae dolore voluptatum accusamus.
@@ -122,15 +180,15 @@
         </div>
         <!--FEATURES - feature n3-->
         <div class="relative mt-20 lg:mt-24">
-            <div class="container flex flex-col lg:flex-row items-center justify-center">
+            <div class="container flex flex-col md:flex-row items-center justify-center">
                 <!-- obrázek-->
-                <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 lg:mb-0">
+                <div class="flex flex-grow-0 flex-shrink-0 basis-[60%] justify-center z-10 mb-10 md:m-0 lg:mb-0">
                     <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full lg:w-auto lg:h-[580px]" src="image/picture-3.jpg" alt="">
                 </div>
                 <!-- CONTENT -->
                 <div class="flex flex-grow-0 flex-shrink-0 basis-[40%] flex-col items-center lg:ml-8 lg:max-w-[380px]">
                     <h1 class="text-3xl text-bookmark-blue">Káva 3</h1>
-                    <p class="text-black my-4 text-center sm:w-3/4 lg:w-full">
+                    <p class="text-sm lg:text-base text-black my-4 text-left w-10/12 sm:w-3/4 lg:w-full">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolorem earum quidem dolor
                         necessitatibus modi ab sed illum? Beatae iste doloremque illo.
@@ -437,7 +495,7 @@
 
 <section class="bg-white mt-10 md:mt-14 lg:mt-20" id="location">
     <div class="max-w-7xl mx-auto px-4">
-        <h2 class="text-3xl text-black font-bold mb-4 text-center">Kde nás najdete?</h2>
+        <h2 class="text-3xl text-black font-bold mb-4 text-center">Kde nás najdete</h2>
         <div class="flex flex-col text-black items-center mb-8 mt-[1rem]">
             <p class="font-bold">Rest Café</p>
             <p class="">Jindřišská 2, Nové Město</p>
@@ -451,45 +509,39 @@
 </section>
 
 <footer class="bg-gradient-to-r from-red-800 to-red-600 mt-10 md:mt-14 lg:mt-20">
-    <div class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8">
-        <div class="grid gap-10 row-gap-6 mb-8 sm:grid-cols-3 lg:grid-cols-3">
-            <div class="sm:col-span-1">
+    <div class="px-4 pt-16 mx-auto w-11/12 md:max-w-full lg:max-w-screen-xl lg:px-8">
+        <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-8 ">
+            <div class="sm:col-span-1 mb-8 md:mb-0">
                 <a href="/" aria-label="Go home" title="Company" class="inline-flex items-center">
                     <img class="h-32" src="./restlogo.png" alt="">
                 </a>
             </div>
-            <div class="space-y-2 text-lg sm:text-sm flex flex-col">
+            <div class="space-y-2 text-md flex flex-col">
                 <p class="text-base font-bold tracking-wide text-white">Kontakt</p>
                 <div class="flex">
                     <p class="mr-1 text-white">Phone:</p>
                     <a href="tel:123-456-789" aria-label="Our phone" title="Our phone"
-                       class="transition-colors text-white duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">+420
+                       class="text-white custom-underline custom-underline-footer">+420
                         123 456 789</a>
                 </div>
                 <div class="flex">
                     <p class="mr-1 text-white">Email:</p>
-                    <a href="mailto:test@seznam.cz" aria-label="Our email" title="Our email"
-                       class="transition-colors text-white duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">info@restcafe.cz</a>
+                    <a href="mailto:info@restcafe.cz" aria-label="Our email" title="Our email"
+                       class="text-white custom-underline custom-underline-footer">info@restcafe.cz</a>
                 </div>
                 <div class="flex">
                     <p class="mr-1 text-white">Adresa:</p>
                     <a href="https://www.google.com/maps/place/Rest+Cafe/@50.0827484,14.4241915,17z/data=!3m1!4b1!4m6!3m5!1s0x470b954ba8aaa593:0x60a134159de605ea!8m2!3d50.082745!4d14.4267664!16s%2Fg%2F11r4ryjcq8?entry=ttu"
                        target="_blank" rel="noopener noreferrer" aria-label="Our address" title="Our address"
-                       class="transition-colors text-white duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800">
+                       class="text-white custom-underline custom-underline-footer">
                         Jindřišská 2, 110 00, Praha 1
                     </a>
                 </div>
-            </div>
-            <div>
-                <span class="sm:text-base text-lg font-bold tracking-wide text-white">Sledujte nás</span>
                 <div class="flex items-center mt-1 space-x-3">
-                    <a href="/" class="text-gray-500 transition-colors duration-300 hover:text-deep-purple-accent-400">
-
-                    </a>
                     <a href="https://www.instagram.com/restcafe.cz/"
-                       class="text-white transition-colors duration-300 hover:text-deep-purple-accent-400"
+                       class=""
                        target="_blank">
-                        <svg viewBox="0 0 30 30" fill="currentColor" class="h-6">
+                        <svg viewBox="0 0 30 30" fill="#FFF" class="h-10 transition-colors duration-300">
                             <circle cx="15" cy="15" r="4"></circle>
                             <path
                                     d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z"
@@ -497,9 +549,9 @@
                         </svg>
                     </a>
                     <a href="https://www.facebook.com/restcafecz/"
-                       class="text-white transition-colors duration-300 hover:text-deep-purple-accent-400"
+                       class=""
                        target="_blank">
-                        <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
+                        <svg viewBox="0 0 24 24" fill="#FFF" class="h-8 transition-colors duration-300">
                             <path
                                     d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
                             ></path>
@@ -508,11 +560,7 @@
                 </div>
             </div>
         </div>
-        <div class="flex flex-col-reverse justify-between pt-5 pb-10 border-t lg:flex-row">
-            <p class="text-sm text-white">
-                © Copyright 2024 Pham Kučera Productions.
-            </p>
-        </div>
+        <div class="flex flex-col-reverse justify-between pt-5 pb-10 border-t lg:flex-row"></div>
     </div>
 </footer>
 <button id="scrollTopBtn" class="hidden fixed bottom-4 right-4 bg-gray-800 text-white px-2 py-2 rounded-lg shadow-md">
