--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+	font-family: 'Coffee';
+	src: url(/fonts/coffee.otf) format('opentype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Coffee';
+	src: url(/fonts/coffee-bold.otf) format('opentype');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Coffee';
+	src: url(/fonts/coffee-italic.otf) format('opentype');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'Coffee';
+	src: url(/fonts/coffee-bold-italic.otf) format('opentype');
+	font-weight: bold;
+	font-style: italic;
+}
