--- a/src/output.css
+++ b/src/output.css
@@ -1660,12 +1660,12 @@ html {
   display: inline-flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .h-12 {
@@ -1684,10 +1684,6 @@ html {
   height: 1rem;
 }
 
-.h-5 {
-  height: 1.25rem;
-}
-
 .h-5\/6 {
   height: 83.333333%;
 }
@@ -1696,16 +1692,20 @@ html {
   height: 1.5rem;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
 .h-8 {
   height: 2rem;
 }
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
+}
+
+.w-11\/12 {
+  width: 91.666667%;
 }
 
 .w-16 {
@@ -1732,12 +1732,8 @@ html {
   width: 100%;
 }
 
-.w-10\/12 {
-  width: 83.333333%;
-}
-
-.w-11\/12 {
-  width: 91.666667%;
+.w-9\/12 {
+  width: 75%;
 }
 
 .min-w-28 {
@@ -1817,10 +1813,6 @@ html {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-10 {
-  gap: 2.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1920,8 +1912,8 @@ html {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-red-600 {
-  --tw-gradient-to: #dc2626 var(--tw-gradient-to-position);
+.to-gradient-red-dark {
+  --tw-gradient-to: #450a0a var(--tw-gradient-to-position);
 }
 
 .bg-cover {
@@ -1950,6 +1942,10 @@ html {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-1\.5 {
+  padding: 0.375rem;
 }
 
 .px-2 {
@@ -2023,6 +2019,10 @@ html {
 
 .text-center {
   text-align: center;
+}
+
+.font-custom {
+  font-family: Coffee, sans-serif;
 }
 
 .text-3xl {
@@ -2099,14 +2099,9 @@ html {
   color: rgb(36 42 69 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
+.text-gradient-red-dark {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(69 10 10 / var(--tw-text-opacity));
 }
 
 .text-gray-700 {
@@ -2183,19 +2178,54 @@ html {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hover\:text-gray-500:hover {
+@font-face {
+  font-family: 'Coffee';
+
+  src: url(/fonts/coffee.otf) format('opentype');
+
+  font-weight: normal;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Coffee';
+
+  src: url(/fonts/coffee-bold.otf) format('opentype');
+
+  font-weight: bold;
+
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Coffee';
+
+  src: url(/fonts/coffee-italic.otf) format('opentype');
+
+  font-weight: normal;
+
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Coffee';
+
+  src: url(/fonts/coffee-bold-italic.otf) format('opentype');
+
+  font-weight: bold;
+
+  font-style: italic;
+}
+
+.hover\:text-red-500:hover {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .hover\:text-red-700:hover {
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
-}
-
-.hover\:decoration-blue-500:hover {
-  -webkit-text-decoration-color: #3b82f6;
-          text-decoration-color: #3b82f6;
 }
 
 .peer:checked ~ .peer-checked\:bg-gradient-to-r {
@@ -2237,35 +2267,11 @@ html {
   }
 
   .sm\:w-127 {
-    width: 32rem;
+    width: 34rem;
   }
 
   .sm\:w-3\/4 {
     width: 75%;
-  }
-
-  .sm\:w-10\/12 {
-    width: 83.333333%;
-  }
-
-  .sm\:w-9\/12 {
-    width: 75%;
-  }
-
-  .sm\:w-11\/12 {
-    width: 91.666667%;
-  }
-
-  .sm\:max-w-xl {
-    max-width: 36rem;
-  }
-
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:p-\[46px\] {
@@ -2285,18 +2291,9 @@ html {
     padding-top: 5rem;
   }
 
-  .sm\:text-center {
-    text-align: center;
-  }
-
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-
-  .sm\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 }
 
@@ -2309,16 +2306,16 @@ html {
     margin: 0px;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:ml-4 {
     margin-left: 1rem;
   }
 
   .md\:mt-14 {
     margin-top: 3.5rem;
-  }
-
-  .md\:mb-0 {
-    margin-bottom: 0px;
   }
 
   .md\:flex {
@@ -2368,11 +2365,6 @@ html {
     padding-right: 0px;
   }
 
-  .md\:px-24 {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -2381,11 +2373,6 @@ html {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .md\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
   }
 
   .md\:text-black {
@@ -2414,14 +2401,6 @@ html {
 
   .lg\:mt-24 {
     margin-top: 6rem;
-  }
-
-  .lg\:flex {
-    display: flex;
-  }
-
-  .lg\:hidden {
-    display: none;
   }
 
   .lg\:h-16 {
@@ -2460,26 +2439,8 @@ html {
     max-width: 1124px;
   }
 
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .lg\:flex-row {
     flex-direction: row;
-  }
-
-  .lg\:flex-row-reverse {
-    flex-direction: row-reverse;
-  }
-
-  .lg\:items-center {
-    align-items: center;
-  }
-
-  .lg\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:px-8 {
