--- a/src/site.ejs
+++ b/src/site.ejs
@@ -34,7 +34,7 @@
 
 		.custom-underline:hover,
 		.custom-underline:focus {
-			color: #CF2424;
+			color: #8F1628;
 		}
 
 		.custom-underline-footer:hover,
@@ -564,7 +564,7 @@
                 </button>
             </div>
             <div class="space-y-2 text-md flex flex-col">
-                <p class="text-base font-bold tracking-wide text-white">Kontakt</p>
+                <p class="text-lg font-bold tracking-wide text-white">Kontakt</p>
                 <div class="flex">
                     <p class="mr-1 text-white">Phone:</p>
                     <a href="tel:123-456-789" aria-label="Our phone" title="Our phone"
