--- a/src/site.ejs
+++ b/src/site.ejs
@@ -442,7 +442,7 @@
 
 
 <section
-        class="bg-gradient-to-r from-red-800 to-gradient-red-dark pt-16 pb-7 mt-10 md:mt-14 container lg:mt-20 relative overflow-hidden"
+        class="bg-gradient-to-b from-red-800 to-gradient-red-dark pt-16 pb-7 mt-10 md:mt-14 container lg:mt-20 relative overflow-hidden"
         id="reviews">
     <div class="max-w-7xl mx-auto px-4">
         <h2 class="text-3xl font-bold mb-4 text-center text-white">Naše hodnocení</h2>
@@ -554,7 +554,7 @@
     </div>
 </section>
 
-<footer class="bg-gradient-to-r from-red-800 to-gradient-red-dark mt-10 md:mt-14 lg:mt-20">
+<footer class="bg-gradient-to-b from-red-800 to-gradient-red-dark mt-10 md:mt-14 lg:mt-20">
     <div class="px-4 pt-16 mx-auto w-11/12 md:max-w-full lg:max-w-screen-xl lg:px-8">
         <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-8 ">
             <div class="sm:col-span-1 mb-8 md:mb-0">
