--- a/src/site.ejs
+++ b/src/site.ejs
@@ -47,7 +47,7 @@
 			transform: scale(1.1);
 		}
 
-		button svg:hover {
+		#scrollTopBtn svg:hover {
 			fill: #C9C9C9;
 			transform: rotate(-19deg);
 		}
@@ -111,7 +111,7 @@
                         <img src="image/restlogo.png" class="h-16" alt="restcafe logo">
                     </a>
                     <button class="navbar-close">
-                        <svg class="h-6 w-6 text-gradient-red-dark cursor-pointer hover:text-red-500"
+                        <svg class="h-6 w-6 text-gradient-red-dark cursor-pointer"
                              xmlns="http://www.w3.org/2000/svg" fill="#450a0a" viewBox="0 0 24 24"
                              stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
